--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -12,3 +12,10 @@
 
 <%= link_to 'Edit', edit_person_path(@person) %> |
 <%= link_to 'Back', people_path %>
+
+<ul>
+  <% @person.phone_numbers.each do |phone| %>
+    <li><%= phone.number %></li>
+  <% end %>
+</ul>
+<%= link_to 'Add phone number', new_phone_number_path %>
